welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:4: error: Boolean(false) does not take parameters
		return false();
                            ^sleepIn:9: error: Boolean(true) does not take parameters
		return true();
                           ^sleepIn:8: error: type mismatch;
 found   : Unit
 required: Boolean
		if(vacation == true){ 
                ^sleepIn:7: error: type mismatch;
 found   : Unit
 required: Boolean
	if (weekday == false){
        ^